# jungle

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.github/workflows/: check.yml  ci.yml  release.yml
docs/: design.md  plan-basics.md  proposal-fetch-status-display.md
src/: cli.rs  lib.rs  main.rs
src/commands/: fetch.rs
tests/: cli.rs  integration.rs
tests/harness/: mod.rs
