[package]
name = "jgl"
version = "0.6.0-dev"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Multi-repo manager for jujutsu (jj)"
repository = "https://github.com/omarkohl/jgl"
keywords = ["jujutsu", "jj", "git", "vcs", "multi-repo"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "jgl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
etcetera = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
